# immortals

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FHL.docx  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: coderAS.md  discoverAS.md  discussAS.md  experimentAS.md  managerAS.md  paperAS.md  patentAS.md  prepAS.md  presentAS.md  researchAS.md  teachAS.md
agentsuite/: __init__.py  __main__.py  cli.py  config.py
agentsuite/contracts/: __init__.py  models.py  validate.py
agentsuite/contracts/schemas/: artifact.v1.json  event.v1.json  plan.v1.json  registry.v1.json
agentsuite/memory/: __init__.py  derived.py  embedding.py  mcp_server.py  store.py
agentsuite/orchestrator/: __init__.py  guardrails.py  runner.py
agentsuite/registry/: __init__.py  loader.py
agentsuite/runners/: base.py  copilot_backend.py  mock.py
design/: architecture.md  handoff.md  plan.md  prototype-frontend-handoff.md
design/evidence/: agentsuite-empirical-validation-2026-06-20.md
docs/: SETUP.md  cross-harness-tooling.md
immortals/: __init__.py  __main__.py  cli.py  config.py  skills_mcp.py
immortals/contracts/: models.py  validate.py
immortals/contracts/schemas/: artifact.v1.json  event.v1.json  plan.v1.json  registry.v1.json
immortals/dashboard/: __init__.py  app.py  authoring.py  planner.py  projects.py  runs_api.py  settings.py
immortals/dashboard/static/: index.html
immortals/memory/: __init__.py  derived.py  embedding.py  mcp_server.py  store.py
immortals/orchestrator/: __init__.py  guardrails.py  runner.py
immortals/registry/: loader.py
immortals/runners/: __init__.py  api_backend.py  base.py  copilot_backend.py  mock.py  tools.py
immortals/runners/providers/: __init__.py  anthropic.py  base.py  fake.py  gemini.py  ollama.py  openai.py
packaging/: engine_entry.py  immortals-engine.spec
patrecAS/: README.md
patrecAS/design/: architecture.md  decisions.md  deep-dive.md  plan.md
portable/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md
portable/mcp/: codex.config.toml  gemini.settings.json
presentation/: immortals-pitch-script.md  immortals-pitch.html
prototype/jarvis-bubble/: README.md  index.html
registry/: coderAS.json  discoverAS.json  discussAS.json  experimentAS.json  paperAS.json  patentAS.json  prepAS.json  presentAS.json  researchAS.json  teachAS.json
scripts/: backfill_demo_inputs.py  gen_adapters.py  gen_skill_index.py  lint_prompts.py  sample_eigen_plan.json  smoke_backend_a.py
skills/: INDEX.json  PROVENANCE.md
skills/citation-verify/: SKILL.md
skills/citation-verify/assets/: resolve_refs.py
skills/citation-verify/references/: examples.md
skills/data-analysis-plots/: SKILL.md
skills/data-analysis-plots/assets/: analyze.py
skills/data-analysis-plots/references/: examples.md
skills/discovery-log/: SKILL.md
skills/git-pr-workflow/: SKILL.md
skills/git-pr-workflow/references/: examples.md
skills/interactive-explorable/: SKILL.md
skills/latex-build/: SKILL.md
skills/latex-build/assets/: build.py
skills/lecture-notes/: SKILL.md
skills/lecture-notes/assets/: fetch_transcript.py  index-template.html  note-template.html  validate.js
skills/lecture-notes/references/: edge-cases.md  enrichment.md  pedagogy.md  styling.md
skills/literature-search/: SKILL.md
skills/novelty-log/: SKILL.md
skills/paper-explainer/: SKILL.md
skills/paper-explainer/references/: diagrams.md  edge-cases.md  equations.md  html-template.md  output-protocol.md
skills/paper-poster/: SKILL.md
skills/paper-poster/references/: build.md  layouts.md  specs.md
skills/patent-claim-drafter/: SKILL.md
skills/plan-synthesis-report/: SKILL.md
skills/prep-interview/: SKILL.md
skills/prep-presentation/: SKILL.md
skills/present-pitch-script/: SKILL.md
skills/prior-art-search/: SKILL.md
skills/resume-optimizer/: SKILL.md
tests/: test_api_backend.py  test_authoring.py  test_cli.py  test_config.py  test_contracts.py  test_copilot_backend.py  test_dashboard.py  test_derived.py  test_guardrails.py  test_memory.py  test_memory_mcp.py  test_orchestrate.py  test_orchestrator.py  test_parallel.py  test_partial.py  test_projects_api.py  test_prompt_lint.py  test_providers.py  test_registry.py  test_resume.py  test_routing.py  test_settings.py  test_skills_mcp.py  test_write_api.py
video/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/public/audio/: s01.vtt  (+7 more)
video/scripts/: gen-audio.mjs  gen-timings.mjs
video/src/: Composition.tsx  Root.tsx  sections.js  theme.ts  timings.json
(+13 files in other folders)
