[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "immortals"
dynamic = ["version"]
description = "Immortals: a manager-orchestrated multi-agent system over the AS agent suite (managerAS + a deterministic orchestrator)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aritra Das" }]
keywords = ["multi-agent", "orchestration", "llm", "agents", "copilot", "dag", "event-sourcing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "jsonschema>=4.20",
]

[project.urls]
Homepage = "https://github.com/starkaritra/immortals"
Repository = "https://github.com/starkaritra/immortals"
Changelog = "https://github.com/starkaritra/immortals/blob/main/CHANGELOG.md"

[project.scripts]
immortals = "immortals.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]
# Standalone model-provider backend (AS-030). Each provider's SDK is optional: install only the
# one(s) you use. `providers` pulls the hosted trio; `ollama` is the free/local option.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
gemini = ["google-genai>=0.3"]
ollama = ["ollama>=0.3"]
providers = ["anthropic>=0.40", "openai>=1.40", "google-genai>=0.3"]

[tool.setuptools.dynamic]
version = { attr = "immortals.__version__" }

[tool.setuptools.packages.find]
include = ["immortals*"]

[tool.setuptools.package-data]
"immortals.contracts" = ["schemas/*.json"]
"immortals.dashboard" = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
